gitops/dashboards/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboards
  labels:
    app.kubernetes.io/part-of: dashboards
